# specsnakez

./: pyproject.toml
specsnakez/core/: README.md  base_spectrum.py  builtin_loaders.py  cli.py  exceptions.py  langmuir_isotherm.py  plotting.py  sfg_spectrum.py  spectrum_factory.py
specsnakez/orm/: batch_processing.py  boknis_dtos.py  gasex_dtos.py  import_db_controller.py  interact.py
