[tool.poetry]
name = "specsnakez"
version = "0.1.0"
description = ""
authors = ["Florian-David Lange <florian-david.lange@smartlab-solutions.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
scipy = "^1.10.0"
peakutils = "^1.3.4"
matplotlib = "^3.7.0"
sqlalchemy = "^2.0.3"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
